<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AutomaticOrderFragment">

    <LinearLayout
        android:id="@+id/PacientLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="8dp"
            android:text="@string/Pacient"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/InfoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="12dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/pacient_image_order"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/ic_pacienticon" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginVertical="12dp"
                android:layout_weight="4"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/pacient_name_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/PacientName" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="4dp" />

                <TextView
                    android:id="@+id/pacient_cnp_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/PacientID" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="4dp" />

                <TextView
                    android:id="@+id/pacient_phone_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/PacientPhoneNo" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tvPrescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="8dp"
            android:text="@string/Prescription" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:padding="16dp">

            <LinearLayout
                android:id="@+id/PrescriptionLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"></LinearLayout>
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ButtonLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:gravity="center|center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/cancel_order_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/CancelButton" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/confirm_order_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/ConfirmButton" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>